fix: run locally with swagger
